# wrp

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: azure.yml
algorithms/: README.md  algorithms.h  compare.h  numeric.h
run/: build.sh  rebuild.sh  rebuild_PVS.sh
test/: CMakeLists.txt  test_numeric.cpp  test_utilities.cpp  test_wrappers.cpp
